test/domains/compilerErrors/notsupportedOpCount-assoc.chpl

var dfltAssociativeBase = {1, 3, 4};
writeln(dfltAssociativeBase # 1);
