test/domains/compilerErrors/notsupportedOpCount-assoc.good
notsupportedOpCount-assoc.chpl:3: error: cannot apply '#' to associative and sparse domains and arrays
